fix(ui): fix overflow of presets on large screen

--- a/style/style.scss
+++ b/style/style.scss
@@ -213,12 +213,16 @@ main {
         grid-template-columns: 2fr 6fr 2fr;
         grid-template-rows: 1fr;
         flex: 1;
+        overflow: hidden;
+
         .presets {
             padding: var(--space-3);
             background: var(--color-divider);
             border: 0.5px solid var(--color-border);
             display: flex;
             flex-direction: column;
+            overflow: hidden;
+
             .details {
                 margin-bottom: var(--space-5);
 
@@ -239,6 +243,11 @@ main {
                 flex-direction: column;
                 gap: 1rem;
                 cursor: pointer;
+                overflow-y: auto;
+                flex: 1;
+                scrollbar-width: none;
+                -ms-overflow-style: none;
+
                 .outer {
                     border: 1px solid #fff;
                     padding: 0.3rem;
@@ -261,6 +270,10 @@ main {
 
                     }
                 }
+            }
+
+            .filter-container::-webkit-scrollbar {
+                display: none;
             }
         }
 
